<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:weightSum="100">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/product_name_dialog_edit_text"
            android:hint="@string/product_name"
            android:textSize="18sp"
            android:layout_gravity="bottom"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="30dp">

        <EditText
            android:id="@+id/product_quantity_dialog_edit_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/product_quantity"
            android:textSize="18sp"
            android:textAlignment="center"
            android:inputType="number"
            android:lines="1" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/type_spinner"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:entries="@array/quantity_type_options">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:layout_marginTop="30dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:id="@+id/add_button_dialog"
            android:text="@string/add_product"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            android:textAllCaps="false"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:id="@+id/cancel_button_dialog"
            android:text="@string/dialog_cancel_button"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            android:textAllCaps="false"/>
    </LinearLayout>

</LinearLayout>