<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.misapps.oscarruiz.myshopping.app.fragments.AddListFragment"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/list_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/list_name"
                android:textSize="16sp"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/list_date_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_weight="40"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="14sp"
        android:text="@string/add_products"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <EditText
            android:id="@+id/product_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="30dp">

        <EditText
            android:id="@+id/product_quantity_edit_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/product_quantity"
            android:textSize="18sp"
            android:textAlignment="center"
            android:inputType="number"
            android:lines="1" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/type_spinner"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:entries="@array/quantity_type_options">
        </Spinner>
        <Button
            android:id="@+id/add_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/add_button"/>
    </LinearLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="3391.67">
    </ListView>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/colorAccent"
        android:layout_gravity="end"
        style="@style/Widget.AppCompat.Button.Borderless"/>

</LinearLayout>
