<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.misapps.oscarruiz.myshopping.app.fragments.DetailListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_edit_text"
                android:maxLines="1"
                android:inputType="text"
                android:hint="@string/search"/>
            <Button
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/clear_text_button"
                android:layout_gravity="right|center_vertical"
                android:background="@mipmap/clear_text_icon"/>
        </FrameLayout>

        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/search_button"
            android:background="@mipmap/search_icon"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:id="@+id/detail_listview"
        android:descendantFocusability="afterDescendants"
        android:layout_marginTop="10dp">
    </com.baoyz.swipemenulistview.SwipeMenuListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="10"
        android:weightSum="100"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:text="@string/total_price"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/total_price_text_view"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:layout_marginLeft="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"/>

        <Button
            android:id="@+id/change_quantity_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/done"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:layout_gravity="center_vertical"
            android:visibility="invisible"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>

    </LinearLayout>


</LinearLayout>
